--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Приветствие, информация о себе и факты о баскетболе</title>
+    <link rel="stylesheet" href="css/pop2.css">
+    <script src="JS/pop.js"></script>
 </head>
 <body>
     <header>
