--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <section>
         <h2>Приветствие</h2>
             <img src=https://99px.ru/sstorage/86/2020/02/10402202242022223.gif img>
-        <p>Привет! Я рад приветствовать вас на этом сайте.</p>
+        <p>Привет! Мы рады приветствовать вас на этом сайте.</p>
     </section>
 
     <section>
         <h2>Информация о себе</h2>
-        <p>Привет, меня зовут Тростин Никита я учусь в "СТАНКИНЕ" группа АДБ-21-08, очень люблю играть в бскетбол и делать сайты, больше ничего не люблю.</p>
+        <p>Привет, Это сайт Тростина Никиты АДБ-21-08 и Рудометова Никиты АДБ-21-07 мы учимся в "СТАНКИНЕ", очень любим играть в баскетбол и делать сайты, больше ничего не любим.</p>
     </section>
 
     <section>
